tests/sema/fail/v5_fail_str_new_removed.ep
# COMPILE_FAIL: unknown function str_new
fun main(): void {
    let s = str_new(0, 0)
}
